--- a/2025-26/APPWEB 2025-26/Tasca 1.13/CSS/Tasca 1.13.css
+++ b/2025-26/APPWEB 2025-26/Tasca 1.13/CSS/Tasca 1.13.css
@@ -43,6 +43,11 @@ img {
     width: 250px;
     border-radius: 12px;
 }
+@media (max-width: 480px){
+    img {
+        width: 170px;
+    }
+}
 .imagenes {
     justify-content: center;
     display: flex;
@@ -72,7 +77,7 @@ img {
     transition: color 0.3s ease, transform 0.3s ease;
 }
 .piedepagina {
-    background-color: #cb0404ff;
+    background-color: #2ccb04ff;
     width: 100%;
     align-items: center;
     text-align: center;
@@ -94,4 +99,48 @@ img {
 }
 .piedepagina a:hover {
     color: #0476cb;
+}
+.pedido h2{
+    text-align: center;
+}
+fieldset {
+    background-color: white;
+    border-radius: 12px;
+    border: none;
+    width: 75%;
+    padding: 10px;
+}
+input[type="text"],
+textarea {
+    width: 98%;
+}
+input[type="submit"] {
+    width: 100%;
+    background-color: #2ccb04ff;
+    border: 1px solid #2ccb04ff;
+    border-radius: 12px;
+    color: white;
+    font-weight: 800;
+    margin-top: 10px;
+}
+input[type="submit"]:hover {
+    background-color: #cb0404ff;
+    border: 1px solid #cb0404ff;
+}
+form {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+select{
+    width: 100%;
+}
+label {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
 }
